--- a/static/index.html
+++ b/static/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portofolio</title>
-    <link rel="stylesheet" href="../css/styles.css" />
-    <link rel="stylesheet" href="../css/mediaqueries.css" />
-    <link rel="stylesheet" href="../css/loading-animation.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/mediaqueries.css" />
+    <link rel="stylesheet" href="css/loading-animation.css" />
   </head>
 
   <body>
@@ -41,7 +41,7 @@
     <section class="profile" id="profile">
       <div class="section__pic-container">
         <img
-          src="../images/profile-.png"
+          src="images/profile-.png"
           alt="Gilang ramadhan Profile picture"
           loading="lazy"
         />
@@ -52,7 +52,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./images/blank-profile-picture-973460_1280.png')"
+            onclick="window.open('/images/blank-profile-picture-973460_1280.png')"
           >
             Download CV
           </button>
@@ -68,7 +68,7 @@
             
           </p>
           <!-- <img -->
-          <!--   src="./assets/linkedin.png" -->
+          <!--   src="assets/linkedin.png" -->
           <!--   alt="My linkedin profile" -->
           <!--   class="icon" -->
           <!--   onclick="location.href='https://linkedin.com/'" -->
@@ -91,7 +91,7 @@
       <div class="section-container">
         <div class="section__pic-container pic_1">
           <img
-            src="../images/Desain tanpa judul.png"
+            src="images/Desain tanpa judul.png"
             alt="Profile picture"
             class="about-pic"
           />
@@ -101,7 +101,7 @@
             <div class="about-containers">
               <div class="details-container">
                 <img
-                  src="../assets/experience.png"
+                  src="assets/experience.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -113,7 +113,7 @@
               </div>
               <div class="details-container">
                 <img
-                  src="../assets/education.png"
+                  src="assets/education.png"
                   alt="Education icon"
                   class="icon"
                 />
@@ -139,7 +139,7 @@
         </div>
       </div>
       <img
-        src="../assets/arrow.png"
+        src="assets/arrow.png"
         alt="arrow icon"
         class="icon arrow"
         onclick="location.href='./#experience'"
@@ -158,7 +158,7 @@
               <article>
                 <p class="icon__experience html"></p>
                 <!-- <img -->
-                <!--   src="./assets/html.png" -->
+                <!--   src=".//assets/html.png" -->
                 <!--   alt="experience icon" -->
                 <!--   class="icon" -->
                 <!-- /> -->
@@ -182,7 +182,7 @@
               <article>
                 <p class="icon__experience javascript"></p>
                 <!-- <img -->
-                <!--   src="./assets/java-script.png" -->
+                <!--   src=".//assets/java-script.png" -->
                 <!--   alt="experience icon" -->
                 <!--   class="icon" -->
                 <!-- /> -->
@@ -194,7 +194,7 @@
               <article>
                 <p class="icon__experience material_ui">󰍗</p>
                 <!-- <img -->
-                <!--   src="./assets/material_ui.png" -->
+                <!--   src=".//assets/material_ui.png" -->
                 <!--   alt="experience icon" -->
                 <!--   class="icon" -->
                 <!-- /> -->
@@ -212,7 +212,7 @@
               <h2 class="experience-sub-title">Backend Development</h2>
               <article>
                 <p class="icon__experience go"></p>
-                <!-- <img src="./assets/go.png" alt="experience icon" class="icon" /> -->
+                <!-- <img src=".//assets/go.png" alt="experience icon" class="icon" /> -->
                 <div>
                   <h3>GOLANG</h3>
                   <p>Soon</p>
@@ -221,7 +221,7 @@
               <article>
                 <p class="icon__experience sql"></p>
                 <!-- <img -->
-                <!--   src="./assets/sql-server.png" -->
+                <!--   src=".//assets/sql-server.png" -->
                 <!--   alt="experience icon" -->
                 <!--   class="icon" -->
                 <!-- /> -->
@@ -233,7 +233,7 @@
               <article>
                 <p class="icon__experience mongodb"></p>
                 <!-- <img -->
-                <!--   src="./assets/mongodb.png" -->
+                <!--   src=".//assets/mongodb.png" -->
                 <!--   alt="experience icon" -->
                 <!--   class="icon" -->
                 <!-- /> -->
@@ -252,7 +252,7 @@
               <article>
                 <p class="icon__experience cpp"></p>
                 <!-- <img -->
-                <!--   src="./assets/cpp.png" -->
+                <!--   src=".//assets/cpp.png" -->
                 <!--   alt="experience icon" -->
                 <!--   class="icon" -->
                 <!-- /> -->
@@ -264,7 +264,7 @@
               <article>
                 <p class="icon__experience git">󰊢</p>
                 <!-- <img -->
-                <!--   src="./assets/git.png" -->
+                <!--   src=".//assets/git.png" -->
                 <!--   alt="experience icon" -->
                 <!--   class="icon" -->
                 <!-- /> -->
@@ -276,7 +276,7 @@
               <article>
                 <p class="icon__experience wordpress"></p>
                 <!-- <img -->
-                <!--   src="./assets/wordpress-logo.png" -->
+                <!--   src=".//assets/wordpress-logo.png" -->
                 <!--   alt="experience icon" -->
                 <!--   class="icon" -->
                 <!-- /> -->
@@ -288,7 +288,7 @@
               <article>
                 <p class="icon__experience docker">󰡨</p>
                 <!-- <img -->
-                <!--   src="./assets/docker.png" -->
+                <!--   src=".//assets/docker.png" -->
                 <!--   alt="experience icon" -->
                 <!--   class="icon" -->
                 <!-- /> -->
@@ -300,7 +300,7 @@
               <article>
                 <p class="icon__experience linux"></p>
                 <!-- <img -->
-                <!--   src="./assets/linux-platform.png" -->
+                <!--   src=".//assets/linux-platform.png" -->
                 <!--   alt="experience icon" -->
                 <!--   class="icon" -->
                 <!-- /> -->
@@ -314,7 +314,7 @@
         </div>
       </div>
       <img
-        src="../assets/arrow.png"
+        src="assets/arrow.png"
         alt="arrow icon"
         class="icon arrow"
         onclick="location.href='./#projects'"
@@ -333,7 +333,7 @@
               login dan tugas
             </p>
             <video width="320" height="240" autoplay>
-              <source src="../assets/project_TLM.webm" />
+              <source src="assets/project_TLM.webm" />
             </video>
             <div class="btn-container">
               <button
@@ -354,7 +354,7 @@
         </div>
       </div>
       <img
-        src="../assets/arrow.png"
+        src="assets/arrow.png"
         alt="arrow icon"
         class="icon arrow"
         onclick="location.href='./#contact'"
@@ -394,6 +394,6 @@
       </div>
     </section>
     <div class="loader"></div>
-    <script src="../js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
